[gd_scene load_steps=4 format=3 uid="uid://dqwt3gud4r17u"]

[ext_resource type="Theme" uid="uid://si08rmojap6x" path="res://theme.tres" id="1_pkyxd"]
[ext_resource type="Script" path="res://scenes/pages/parametres/parametres.gd" id="2_ovnsh"]
[ext_resource type="Script" path="res://scenes/touch_button.gd" id="4_66qs0"]

[node name="Parametres" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 2088.0
grow_horizontal = 2
theme = ExtResource("1_pkyxd")
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 200
script = ExtResource("2_ovnsh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 135

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Header2"
text = "TR_PARAMETRES"
uppercase = true

[node name="NoResult2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="VBoxContainer/NoResult2"]
layout_mode = 2
theme_type_variation = &"Header4"
text = "TR_LANGUE"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/NoResult2"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Francais" type="Button" parent="VBoxContainer/NoResult2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"AccGreenLightButton"
text = "Fran√ßais"
script = ExtResource("4_66qs0")

[node name="Deutsch" type="Button" parent="VBoxContainer/NoResult2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ContentButton"
text = "Deutsch"
script = ExtResource("4_66qs0")

[node name="NoResult3" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="VBoxContainer/NoResult3"]
layout_mode = 2
theme_type_variation = &"Header4"
text = "TR_DONNEES_D_ENTRAINEMENT"
autowrap_mode = 3

[node name="Label2" type="Label" parent="VBoxContainer/NoResult3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.584314, 0.584314, 0.584314, 1)
text = "TR_SUPPRIMER_DONNEES_EXPLICATION"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/NoResult3"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="DeleteData" type="Button" parent="VBoxContainer/NoResult3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ContentButton"
text = "TR_SUPPRIMER_LES_DONNEES"
autowrap_mode = 3
script = ExtResource("4_66qs0")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Credits" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "TR_CREDITS"
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Disclaimer" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "TR_CLAUSE_DE_NON_RESPONSABILITE"
fit_content = true

[connection signal="touch_pressed" from="VBoxContainer/NoResult2/HBoxContainer/Francais" to="." method="_on_francais_touch_pressed"]
[connection signal="touch_pressed" from="VBoxContainer/NoResult2/HBoxContainer/Deutsch" to="." method="_on_deutsch_touch_pressed"]
[connection signal="touch_pressed" from="VBoxContainer/NoResult3/HBoxContainer/DeleteData" to="." method="_on_delete_data_touch_pressed"]
[connection signal="meta_clicked" from="VBoxContainer/Credits" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="meta_clicked" from="VBoxContainer/Disclaimer" to="." method="_on_rich_text_label_meta_clicked"]
